# iTrace-Core

./: .gitignore  BUILD.md  CMakeLists.txt  CONTRIB.md  LICENSE.md  LICENSE.txt  Makefile  Makefile.Debug  Makefile.Release  README.md  README.txt  build.md  calibration_screen.cpp  calibration_screen.hpp  calibrationscreen.cpp  calibrationscreen.h  contrib.md  enginetest.pro  enginetest.pro.user.54b0e84  enginetest.pro.user.7dd9878  eyetracker.cpp  eyetracker.h  gaze_buffer.cpp  gaze_buffer.hpp  gaze_data.hpp  gaze_handler.cpp  gaze_handler.hpp  gaze_input_queue.cpp  gaze_input_queue.hpp  gaze_writer.cpp  gaze_writer.hpp  gazeserver.cpp  gazeserver.h  itrace_core.pro  itrace_core.sln  jsonwriter.cpp  jsonwriter.h  license.rtf  main.cpp  main.cpp.autosave  (+64 more)
DejaVu/: ComputerEventReader.cs  ComputerEventWriter.cs  DejaVu.csproj  EventRecorder.cs  EventReplayer.cs
DejaVu/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
DejaVuLib/: ComputerEvent.cs  CoreClient.cs  DejaVuLib.csproj  EventFactory.cs  EventFactoryMap.cs  IPauseStrategy.cs  KeyboardHook.cs  MouseHook.cs  PreciseSystemTime.cs  SocketServer.cs  WebSocket.cs  WebSocketServer.cs  Win32.cs  WindowPositionManager.cs
DejaVuLib/Properties/: AssemblyInfo.cs
Properties/: Settings.Designer.cs
UnitTestProject1/: CoreUnitTests.csproj  SmarteyeTests.cs
XUnitTestProject1/: UnitTest1.cs
docs/: GETTING_STARTED.md
itrace_core/: App.config  App.xaml  App.xaml.cs  CalibrationResult.cs  CalibrationWindow.xaml  CalibrationWindow.xaml.cs  ConfigurationRegistry.cs  EyeStatusWindow.xaml  EyeStatusWindow.xaml.cs  GazeData.cs  GazeHandler.cs  GazePointTracker.cs  IGazeData.cs  ITracker.cs  MainWindow.xaml  MainWindow.xaml.cs  MouseTracker.cs  PreciseSystemTime.cs  Reticle.cs  ReticleController.cs  SEWorldModel.cs  ScreenMapping.cs  ScreenRecorder.cs  ScreensAssociater.cs  SessionManager.cs  SessionSetupWindow.xaml  SessionSetupWindow.xaml.cs  SmartEyeRPCUtils.cs  SmartEyeTracker.cs  SocketServer.cs  TobiiCalibrationResults.cs  TobiiTracker.cs  TrackerManager.cs  WebSocket.cs  WebSocketServer.cs  XMLGazeDataWriter.cs  itrace_core.csproj  packages.config
itrace_core/DejaVu/: ComputerEventReader.cs  ComputerEventWriter.cs  EventRecorder.cs  EventReplayer.cs
itrace_core/DejaVuLib/: ComputerEvent.cs  CoreClient.cs  EventFactory.cs  EventFactoryMap.cs  IPauseStrategy.cs  KeyboardHook.cs  MouseHook.cs  Win32.cs  WindowPositionManager.cs
itrace_core/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.en.resx  Resources.resx  Resources.ru-RU.resx  Settings.Designer.cs  Settings.settings
itrace_core_installer/: itrace_core_installer.vdproj
scripts/: test_socket_client.py
